fixed gap in nav

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -119,7 +119,7 @@ html {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        gap: 19px;        
+        gap: 15px;        
       } 
       @media (min-width: 1280px) {        
         gap: 35px;                         
